Finish tablet adaptive and part mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -366,8 +366,16 @@ button {
     -webkit-text-decoration-line: underline !important;
             text-decoration-line: underline !important;
   }
-  .button {
+  button {
     height: 50px;
+  }
+  input {
+    height: 50px;
+    font-family: 'Active Grotesk Corp';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 180%;
+    letter-spacing: -0.01em;
   }
 }
 /*# sourceMappingURL=main.css.map */
