--- a/styles/style.css
+++ b/styles/style.css
@@ -366,8 +366,16 @@ button {
     -webkit-text-decoration-line: underline !important;
             text-decoration-line: underline !important;
   }
-  .button {
+  button {
     height: 50px;
+  }
+  input {
+    height: 50px;
+    font-family: 'Active Grotesk Corp';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 180%;
+    letter-spacing: -0.01em;
   }
 }
 
@@ -1874,6 +1882,216 @@ button {
   .advantages__item:nth-child(3) span {
     width: 244px;
   }
+  .contact-form {
+    padding: 63px 0 80px;
+  }
+  .contact-form__wrapper {
+    width: 100%;
+    max-width: 768px;
+    padding: 0 23px 0 40px;
+  }
+  .contact-form h2 {
+    margin-bottom: 39px;
+  }
+  .contact-form input {
+    width: 215px;
+  }
+  .contact-form button {
+    width: 215px;
+    height: 50px;
+  }
+  .contact-form button span {
+    color: #FFFFFF;
+  }
+  .application-for {
+    width: 100%;
+    max-width: 768px;
+    padding: 110px 0 120px;
+  }
+  .application-for h1 {
+    margin-bottom: 68px;
+  }
+  .application-for__item h6 {
+    margin-bottom: 16px;
+  }
+  .application-for__item h6::before {
+    width: 30px;
+  }
+  .application-for__item:nth-child(2) img {
+    width: 183.4px;
+    height: 192px;
+  }
+  .application-for__item:nth-child(2) span {
+    width: 242px;
+  }
+  .application-for__item:nth-child(3) .img-wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .application-for__item:nth-child(3) img {
+    width: 225.13px;
+    height: 231px;
+  }
+  .application-for__item:nth-child(3) h6, .application-for__item:nth-child(3) span {
+    width: 282px;
+  }
+  .application-for__item:nth-child(3) .application-for__item-info {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .application-for__item:nth-child(4) img {
+    width: 213px;
+    height: 204px;
+    margin: 0;
+  }
+  .application-for__item:nth-child(4) span {
+    width: 344px;
+  }
+  .test-system-form {
+    padding: 69px 0 80px;
+  }
+  .test-system-form h2 {
+    margin: 6px 0 39px;
+  }
+  .test-system-form form {
+    max-width: 688px;
+    width: 100%;
+  }
+  .test-system-form form button {
+    margin-top: 20px;
+    width: 320px;
+  }
+  .test-system-form__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 30px !important;
+  }
+  .test-system-form__row input {
+    width: 320px;
+    margin: 0;
+  }
+  .our-clients {
+    width: 100%;
+    max-width: 768;
+    padding: 103px 40px 0;
+  }
+  .our-clients .partners {
+    margin-top: 57px;
+    height: 300px;
+    padding: 0 0 43px;
+  }
+  .reviews {
+    margin-top: 20px;
+  }
+  .reviews .review__item {
+    padding: 83px 0 130px;
+  }
+  .reviews .review__item h2 {
+    margin-top: 31px;
+  }
+  .reviews .review-autor {
+    margin-top: 69px;
+  }
+  .reviews .review-autor img {
+    width: 68px;
+    height: 68px;
+    margin-bottom: 18px;
+  }
+  .reviews .review-autor .main-text-3 {
+    margin-bottom: 2px;
+  }
+  .reviews .review-autor .autor__company {
+    margin-top: -5px;
+  }
+  .news-subscription {
+    padding: 60px 0;
+  }
+  .news-subscription__wrapper {
+    width: 100%;
+    max-width: 688px;
+  }
+  .news-subscription__wrapper h2 {
+    margin-bottom: 33px;
+  }
+  .news-subscription__wrapper .font_pips {
+    margin-right: 59px;
+  }
+  .news-subscription__wrapper::after {
+    display: none;
+  }
+  .news-subscription__social-network .social-network__wrapper {
+    width: 70px;
+    height: 80px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .news-subscription__social-network .social-network__wrapper a {
+    margin-right: 0 !important;
+  }
+  .news-subscription__social-network .social-network__wrapper img {
+    width: 25px;
+  }
+  .footer {
+    width: 100%;
+    max-width: 688px;
+    padding: 50px 0 69px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    position: relative;
+  }
+  .footer__main-info {
+    margin-right: 80px;
+  }
+  .footer__main-info .main-info__logo {
+    width: 115px;
+    height: 12px;
+  }
+  .footer__main-info h3 {
+    margin: 21px 0 2px;
+    color: #66D1FC;
+  }
+  .footer__main-info .main-text-1 {
+    width: 261px;
+  }
+  .footer .app-btn-group {
+    margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .footer .app-btn-group a:first-child {
+    margin-right: 30px;
+  }
+  .footer .app-btn-group a:first-child img {
+    width: 116px;
+    height: 34px;
+  }
+  .footer .app-btn-group a:last-child img {
+    width: 118px;
+    height: 36px;
+  }
+  .footer__other-info .company-info span:not(:last-child) {
+    margin-bottom: 2px;
+  }
+  .footer__other-info .privacy-policy {
+    position: absolute;
+    left: 0;
+    bottom: 12px;
+  }
+  .footer__scolcovo {
+    width: 34px;
+    height: 26px;
+    position: absolute;
+    top: 89px;
+    left: 50%;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1961,6 +2179,365 @@ button {
         -ms-flex-order: 5;
             order: 5;
     margin-right: 0;
+  }
+  .mobile-app {
+    width: 100%;
+    max-width: 320px;
+    margin-top: 98px;
+  }
+  .mobile-app .advantages {
+    margin: 31px 0 72px;
+    width: 235px;
+    padding: 0;
+  }
+  .mobile-app-swiper__wrapper::before {
+    height: 659px !important;
+    top: 0;
+  }
+  .mobile-app .swiper-container {
+    width: 320px !important;
+  }
+  .mobile-app__slider-card {
+    padding: 0 53px 0 81px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .mobile-app__slider-card .mobile-img {
+    width: 197px;
+    height: 410px;
+    margin-right: 0;
+  }
+  .mobile-app__slider-card .card-info {
+    width: 320px;
+    margin-top: 38px;
+  }
+  .mobile-app__slider-card .card-info .card-title {
+    width: 301px;
+    margin-bottom: 21px;
+  }
+  .mobile-app__slider-card .card-info .card-description__item img {
+    margin-bottom: 19px;
+  }
+  .mobile-app__slider-card .card-info .card-description__item:nth-child(1) img {
+    width: 68.69px;
+    height: 38.79px;
+  }
+  .mobile-app__slider-card .card-info .card-description__item:nth-child(2) img {
+    width: 43.64px;
+    height: 41.21px;
+  }
+  .mobile-app__slider-card .card-info .card-description__item:nth-child(3) img {
+    width: 50.91px;
+    height: 38.79px;
+  }
+  .admin-panel {
+    width: 100%;
+    max-width: 320px;
+    margin-top: 89px;
+  }
+  .admin-panel .advantages {
+    width: 265px;
+    margin: 28px 0 61px;
+    padding: 0;
+  }
+  .admin-panel .swiper-container {
+    width: 320px !important;
+  }
+  .admin-panel__card img {
+    width: 320px;
+    height: 287px;
+    margin-top: 27px;
+  }
+  .admin-panel__title {
+    margin: 0;
+    width: 267px;
+  }
+  .admin-panel__description {
+    margin-top: 11px;
+    width: 272px;
+  }
+  .booking-panel {
+    margin-top: 109px;
+    width: 100%;
+    max-width: 320px;
+  }
+  .booking-panel .advantages {
+    margin: 35px 0 69px;
+    width: 301px;
+    padding: 0;
+  }
+  .booking-panel__opportunity {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .booking-panel .opportunity-item {
+    margin-right: 0 !important;
+    margin-bottom: 19px;
+  }
+  .booking-panel .opportunity-item:first-child {
+    margin-right: 48px !important;
+  }
+  .booking-panel .opportunity-item img {
+    width: 30px;
+    height: 29px;
+    margin-bottom: 10px;
+  }
+  .booking-panel .iframe-wrapper {
+    margin: 24px 0 80px;
+    width: 365px;
+    height: 255px;
+    border-radius: 15px;
+    position: relative;
+    left: 20px;
+    -webkit-box-shadow: 17.3896px 26.0844px 34.7793px rgba(62, 68, 128, 0.25), inset -0.86948px -4.34741px 8.69482px rgba(102, 131, 188, 0.25), inset 4.34741px 0.86948px 8.69482px #FFFFFF;
+            box-shadow: 17.3896px 26.0844px 34.7793px rgba(62, 68, 128, 0.25), inset -0.86948px -4.34741px 8.69482px rgba(102, 131, 188, 0.25), inset 4.34741px 0.86948px 8.69482px #FFFFFF;
+  }
+  .booking-panel .iframe-wrapper iframe {
+    width: 342.71px;
+    height: 235px;
+    border-radius: 12px;
+  }
+  .how-it-work__wrapper {
+    width: 100%;
+    max-width: 320px;
+  }
+  .how-it-work__wrapper h1 {
+    margin-top: 39px;
+  }
+  .how-it-work__instruction {
+    margin-top: 29px;
+  }
+  .how-it-work__instruction img {
+    display: none;
+  }
+  .how-it-work__instruction .instruction__item {
+    margin-left: 10px !important;
+  }
+  .how-it-work__instruction .instruction__item h3 {
+    margin-bottom: 14px;
+  }
+  .how-it-work__instruction .instruction__item .main-text-2 {
+    margin-bottom: 4px;
+  }
+  .how-it-work__instruction:nth-child(2) .instruction__item {
+    width: 271px;
+  }
+  .how-it-work__instruction:nth-child(3) .instruction__item {
+    width: 244px;
+  }
+  .how-it-work__instruction:nth-child(4) .instruction__item {
+    width: 281px;
+  }
+  .system-options {
+    margin-top: 97px;
+  }
+  .free-app {
+    margin-top: 124px;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+  }
+  .free-app__offer-info {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 40px 0;
+  }
+  .free-app__offer-info-wrapper {
+    margin: 0;
+    width: 100%;
+    max-width: 300px;
+  }
+  .free-app__offer-info-wrapper h2 {
+    margin-top: 11px;
+  }
+  .free-app__form {
+    width: 100%;
+    padding: 30px 0;
+  }
+  .free-app__form form {
+    width: 100%;
+    max-width: 300px;
+  }
+  .free-app__form form input {
+    margin-bottom: 20px;
+    width: 100%;
+    max-width: 100%;
+  }
+  .free-app__form form button {
+    margin-top: 20px;
+    height: 50px;
+    width: 100%;
+  }
+  .advantages {
+    margin-top: 92px;
+    width: 100%;
+    max-width: 320px;
+    padding: 0 10px;
+    margin-bottom: 73px;
+  }
+  .advantages h1 {
+    margin: 30px 0 43px;
+    width: 186px;
+  }
+  .advantages__item {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 40px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .advantages__item h4 {
+    margin-left: 59px;
+  }
+  .advantages__item:nth-child(1) {
+    min-width: 248px;
+  }
+  .advantages__item:nth-child(1) img {
+    width: 134px;
+    height: 115px;
+    margin-bottom: 1px;
+  }
+  .advantages__item:nth-child(1) h4 {
+    margin-bottom: 23px;
+    margin-left: 51px;
+  }
+  .advantages__item:nth-child(1) span {
+    width: 248px;
+  }
+  .advantages__item:nth-child(2) {
+    min-width: 290px;
+  }
+  .advantages__item:nth-child(2) img {
+    width: 135px;
+    height: 130px;
+    margin-bottom: 20px;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .advantages__item:nth-child(2) span {
+    width: 267px;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .advantages__item:nth-child(2) h4 {
+    margin-bottom: 0;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-left: 0;
+    margin-right: 30px;
+    margin-top: 10px;
+  }
+  .advantages__item:nth-child(3) {
+    min-width: 270px;
+  }
+  .advantages__item:nth-child(3) img {
+    width: 112px;
+    height: 90px;
+    margin-bottom: 20px;
+  }
+  .advantages__item:nth-child(3) h4 {
+    margin-left: 49px;
+  }
+  .advantages__item:nth-child(3) span {
+    width: 243px;
+  }
+  .contact-form {
+    padding: 38px 0 50px;
+    height: 350px;
+  }
+  .contact-form__wrapper {
+    width: 100%;
+    max-width: 300px;
+    padding: 0;
+  }
+  .contact-form h2 {
+    margin-bottom: 21px;
+  }
+  .contact-form form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-form input {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
+  .contact-form button {
+    width: 100% !important;
+    max-width: 100%;
+    margin-top: 20px;
+  }
+  .application-for {
+    width: 100%;
+    max-width: 320px;
+    padding: 68px 0 73px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .application-for h1 {
+    margin-bottom: 37px;
+    width: 198px;
+  }
+  .application-for__item {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    margin-left: 10px;
+    margin-bottom: 37px;
+  }
+  .application-for__item h6 {
+    margin-bottom: 17px;
+  }
+  .application-for__item h6::before {
+    width: 30px;
+  }
+  .application-for__item .img-wrapper {
+    display: none;
+  }
+  .application-for__item:nth-child(2) .application-for__item-info {
+    width: 244px;
+  }
+  .application-for__item:nth-child(3) .application-for__item-info {
+    width: 286px;
+  }
+  .application-for__item:nth-child(4) {
+    margin-bottom: 0;
+  }
+  .application-for__item:nth-child(4) .application-for__item-info {
+    width: 300px;
   }
 }
 /*# sourceMappingURL=style.css.map */
