--- a/styles/main.css
+++ b/styles/main.css
@@ -6,9 +6,6 @@ body {
 }
 
 body {
-  width: 100%;
-  margin: 0 auto;
-  max-width: 1200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -16,6 +13,14 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 h1 {
@@ -366,8 +371,16 @@ button {
     -webkit-text-decoration-line: underline !important;
             text-decoration-line: underline !important;
   }
-  .button {
+  button {
     height: 50px;
+  }
+  input {
+    height: 50px;
+    font-family: 'Active Grotesk Corp';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 180%;
+    letter-spacing: -0.01em;
   }
 }
 /*# sourceMappingURL=main.css.map */
