--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,11 +8,13 @@ body {
 }
 
 body {
-    width: 100%;
-    margin: 0 auto;
-    max-width: 1200px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 h1 {
@@ -339,7 +341,15 @@ button {
         letter-spacing: -0.01em !important;
         text-decoration-line: underline !important;
     }
-    .button {
+    button {
         height: 50px;
+    }
+    input {
+        height: 50px;
+        font-family: 'Active Grotesk Corp';
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 180%;
+        letter-spacing: -0.01em;
     }
 }
