--- a/styles/style.scss
+++ b/styles/style.scss
@@ -79,6 +79,7 @@
                 position: absolute;
                 top: 16px;
                 right: 13px;
+                cursor: pointer;
             }
             &.active {
                 visibility: visible;
@@ -127,8 +128,9 @@
 .main-baner {
     width: 91%;
     max-width: 1200px;
-    height: 768px;
-    padding-top: 100px;
+    height: 668px;
+    padding-top: 90px;
+    margin-top: 100px;
     font-family: 'Gilroy';
     background-image: url(../assets/images/Illustartion.png);
     background-size: 80%;
@@ -1513,8 +1515,8 @@
     .main-baner {
         width: 100%;
         max-width: 768px;
-        padding: 0 38px; 
-        padding-top: 88px;
+        padding: 50px 38px 0; 
+        margin-top: 88px;
         background-size: 140%;
         height: 1050px;
         &::before {
